--- a/styles/style.css
+++ b/styles/style.css
@@ -78,15 +78,66 @@
   .banner-image{
     width: 100% ;
   }
+  /* MAIN Section style */
+  main{
+    max-width: 1440px;
+    margin: 0 auto;
+  }
+  .teams{
+   display: flex;
+   align-items: center;
+  
+  }
+  .team-image{
+    display: grid;
+   grid-template-columns: repeat(2,1fr);
+   gap: 10px;
+   
+  }
+  .team-container{
+    margin-left: 50px ;
+    max-width: 530px;
+  }
+  /* team-container-title */
+  .team-container-title{
+    font-weight: 700;
+    font-size: 2.8rem;
+  }
+  #quick{
+    font-weight: 500;
+    color: rgb(114, 114, 114);
+  }
+  #of{
+    color: rgb(19, 19, 19);
+  }
+  #features{
+    color: rgb(255, 144, 14);
+  }
+  .team-container-des{
+    font-weight: 400;
+    font-size: 1rem;
+    color: rgb(114, 114, 114);
+  }
 
 
 
   /* Responsive media query */
   @media screen and (max-width:576px) {
-    .navbar , .nav-links {
+    .navbar , .nav-links ,
+    .teams{
       flex-direction: column;
     }
     .nav-links{
       gap: 8px;
+    }
+
+    .team-image{
+      grid-template-columns: repeat(1 ,1fr);
+    }
+  }
+
+  @media screen and (min-width: 576px) and (max-width: 992px) {
+    .teams{
+      flex-direction: column;
     }
   }
