--- a/styles/style.css
+++ b/styles/style.css
@@ -1,143 +1,255 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
-.work-sans-font{
-    font-family: "Work Sans", serif;
-    font-optical-sizing: auto;
-    font-weight: 400px;
-    font-style: normal;
-  }
+.work-sans-font {
+  font-family: "Work Sans", serif;
+  font-optical-sizing: auto;
+  font-weight: 400px;
+  font-style: normal;
+}
 
-  /* Shared style */
-  .display-flex{
-    display: flex;
-  }
-  .btn-one{
-    background-color: rgb(255, 144, 14);
-    font-weight: 600;
-    font-size: 1.2rem;
-    border-radius: 8px;
-    padding: 20px 24px;
-    color: white;
-    border: none;
+/* Shared style */
+.display-flex {
+  display: flex;
+}
+
+.btn-one {
+  background-color: rgb(255, 144, 14);
+  font-weight: 600;
+  font-size: 1.2rem;
+  border-radius: 8px;
+  padding: 20px 24px;
+  color: white;
+  border: none;
 }
 
 
-  /* header Style */
-    .header{
-        background-color: rgba(255, 144, 14, 0.1);
-    }
+/* header Style */
+.header {
+  background-color: rgba(255, 144, 14, 0.1);
+}
 
-  /* nav bar related style */
-  .navbar{
-       justify-content: space-between;
-       align-items: center;
-  }
-  .brand{
-    color: rgb(19, 19, 19);
-    font-size: 3rem; 
-    font-weight: 700;
-  }
-  .nav-links{
-     list-style: none;
-     
-  }
-  .nav-item {
-    margin-right: 30px;
-  }
-  .nav-link{
-    text-decoration: none;
-    font-weight: 500;
-    font-size: 18px;
-    color: rgb(66, 66, 66);
-  }
+/* nav bar related style */
+.navbar {
+  justify-content: space-between;
+  align-items: center;
+}
 
+.brand {
+  color: rgb(19, 19, 19);
+  font-size: 3rem;
+  font-weight: 700;
+}
 
-  .navbar , .banner {
-    max-width: 1440px;
-    margin: 0 auto;
-  }
-  /* banner related style */
-  .banner-content{
-    max-width: 850px;
-    margin: 0 auto;
-    text-align: center;
-    margin-bottom: 50px;
-    /* border: 2px solid red; */
-  }
-  .banner-title{
-    font-weight: 700;
-    font-size: 4rem;
-    color: rgb(19, 19, 19);
-    
-  }
-  .banner-description{
-    font-size: 1rem;
-    color: rgb(114, 114, 114);
-    /* text-align: center; */
-  }
-  .banner-image{
-    width: 100% ;
-  }
-  /* MAIN Section style */
-  main{
-    max-width: 1440px;
-    margin: 0 auto;
-  }
-  .teams{
-   display: flex;
-   align-items: center;
-  
-  }
-  .team-image{
-    display: grid;
-   grid-template-columns: repeat(2,1fr);
-   gap: 10px;
-   
-  }
-  .team-container{
-    margin-left: 50px ;
-    max-width: 530px;
-  }
-  /* team-container-title */
-  .team-container-title{
-    font-weight: 700;
-    font-size: 2.8rem;
-  }
-  #quick{
-    font-weight: 500;
-    color: rgb(114, 114, 114);
-  }
-  #of{
-    color: rgb(19, 19, 19);
-  }
-  #features{
-    color: rgb(255, 144, 14);
-  }
-  .team-container-des{
-    font-weight: 400;
-    font-size: 1rem;
-    color: rgb(114, 114, 114);
-  }
+.nav-links {
+  list-style: none;
+
+}
+
+.nav-item {
+  margin-right: 30px;
+}
+
+.nav-link {
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 18px;
+  color: rgb(66, 66, 66);
+}
 
 
+.navbar,
+.banner {
+  max-width: 1440px;
+  margin: 0 auto;
+}
 
-  /* Responsive media query */
-  @media screen and (max-width:576px) {
-    .navbar , .nav-links ,
-    .teams{
-      flex-direction: column;
-    }
-    .nav-links{
-      gap: 8px;
-    }
+/* banner related style */
+.banner-content {
+  max-width: 850px;
+  margin: 0 auto;
+  text-align: center;
+  margin-bottom: 50px;
+  /* border: 2px solid red; */
+}
 
-    .team-image{
-      grid-template-columns: repeat(1 ,1fr);
-    }
+.banner-title {
+  font-weight: 700;
+  font-size: 4rem;
+  color: rgb(19, 19, 19);
+
+}
+
+.banner-description {
+  font-size: 1rem;
+  color: rgb(114, 114, 114);
+  /* text-align: center; */
+}
+
+.banner-image {
+  width: 100%;
+  padding-bottom: 45px;
+}
+
+/* MAIN Section style */
+main {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+.teams {
+  display: flex;
+  align-items: center;
+  /* padding: 80px  300px ; */
+
+}
+
+.team-image {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px;
+
+}
+
+.team-container {
+  margin-left: 50px;
+  max-width: 530px;
+}
+
+/* team-container-title */
+.team-container-title {
+  font-weight: 700;
+  font-size: 2.8rem;
+}
+
+#quick {
+  font-weight: 500;
+  color: rgb(114, 114, 114);
+}
+
+#of {
+  color: rgb(19, 19, 19);
+}
+
+#features {
+  color: rgb(255, 144, 14);
+}
+
+.team-container-des {
+  font-weight: 400;
+  font-size: 1rem;
+  color: rgb(114, 114, 114);
+}
+
+/* <!-- some facts styles --> */
+.some-facts {}
+
+.facts-title {
+  font-weight: 700;
+  font-size: 2.8rem;
+  color: rgb(19, 19, 19);
+}
+
+.facts-description {
+
+  color: rgb(114, 114, 114);
+}
+
+.facts-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+
+}
+
+.fact {
+  border: 2px solid tomato;
+  width: 240px;
+  height: 240px;
+  border-radius: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+
+}
+.fact-number{
+  font-weight: 600;
+  font-size: 2.8rem;
+  color: rgb(66, 66, 66);
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+.fact-name{
+  font-size: 1.25rem;
+  font-weight: 600;
+  margin-top: 10px;
+}
+
+/* Sponsors Related style */
+ .sponsor-info{
+  max-width: 540px;
+  margin: 50px auto;
+  text-align: center;
+ }
+ .sponsor-title{
+  font-weight: 700;
+  font-size: 2.8rem;
+  color: rgb(19, 19, 19);
+ }
+ .sponsor-description{
+  color: rgb(114, 114, 114);
+ }
+ .sponsor-company{
+  display: grid;
+  grid-template-columns: repeat(5 , 1fr);
+ }
+ .sponsor-company img{
+  filter: grayscale(100%);
+ }
+
+/* Responsive media query */
+@media screen and (max-width:576px) {
+
+  .navbar,
+  .nav-links,
+  .teams {
+    flex-direction: column;
   }
 
-  @media screen and (min-width: 576px) and (max-width: 992px) {
-    .teams{
-      flex-direction: column;
-    }
+  .nav-links {
+    gap: 8px;
   }
+
+  /* .teams{
+      padding: 0%;
+    } */
+  .team-image {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .facts-container{
+    grid-template-columns: 1fr;
+    justify-items: center;
+    gap: 10px;
+  }
+  .sponsor-company{
+    grid-template-columns: 1fr;
+    justify-items: center;
+    gap: 10px;
+  }
+}
+
+@media screen and (min-width: 576px) and (max-width: 992px) {
+  .teams {
+    flex-direction: column;
+  }
+
+  .facts-container{
+    grid-template-columns: repeat(2 ,1fr);
+    justify-items: center;
+    gap: 10px;
+  }
+  .sponsor-company{
+    grid-template-columns: repeat(3 ,1fr);
+    justify-items: center;
+    gap: 10px;
+  }
+}
